--- a/index.html
+++ b/index.html
@@ -63,70 +63,83 @@
     <div id="container">
         <!-- content1 -->
         <div class="content1">
-            <h2>기업정보</h2>
-            <ul>
+            <h2>뉴스룸</h2>
+            <ul class="news_list">
             <li>
-                <dl>
-                <dt>설립연도</dt>
-                <dd><span>1973</span>년</dd>
-                </dl>
+                <a href="#">
+                    <div class="thumnail">
+                        <img src="images/imageView.jpg" alt="POSTECH 업무협력 협약식" />
+                    </div>
+                    <div class="news_txt">
+                        <div class="info">
+                            <span class="type press">보도자료</span>
+                            <span class="date">2022.11.21</span>
+                        </div>
+                        <p>삼성전기, 포항공대와 소재·부품 인재 양성 MOU</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <dl>
-                <dt>매출</dt>
-                <dd><span>8</span>조 <span>2,087</span>억원</dd>
-                </dl>
+                <a href="#">
+                    <div class="thumnail">
+                        <img src="images/imageView 2.jpg" alt="이-에스-지 전래동화" />
+                    </div>
+                    <div class="news_txt">
+                        <div class="info">
+                            <span class="type company">기업</span>
+                            <span class="date">2022.11.10</span>
+                        </div>
+                        <p>[삼성전기 이-에스-지 전래동화] EP.3 임금님 Gㅟ는 당나귀Gㅟ</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <dl>
-                <dt>자산</dt>
-                <dd><span>9</span>조 <span>2,255</span>억원</dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                <dt>생산거점 및 판매거점</dt>
-                <dd><span>5</span>개국 <span>8</span>개 / <span>8</span>개국 <span>16</span>개</dd>
-                </dl>
+                <a href="#">
+                    <div class="thumnail">
+                        <img src="images/imageView 3.png" alt="Impedance-Part2" />
+                    </div>
+                    <div class="news_txt">
+                        <div class="info">
+                            <span class="type tech">기술</span>
+                            <span class="date">2022.11.01</span>
+                        </div>
+                        <p>[MLCC Characteristics] 6. Impedance - Part2</p>
+                    </div>
+                </a>
             </li>
             </ul>
-            <p>(*2020년 연결 기준)</p>
-            <div><a href="#">자세히 보기</a></div>
+            <div class="news_letter">
+                <div class="news_txt">
+                    <h3>뉴스레터</h3>
+                    <span>삼성전기의 주요 소식들을 신속하게 알려드립니다.</span>
+                </div>
+                <ul class="news_btn">
+                    <li><a href="#">뉴스레터 보기</a></li>
+                    <li><a href="#">뉴스레터 신청</a></li>
+                </ul>
+            </div>
         </div>
         <!-- //content1 -->
         <hr />
+        <!-- pr hall_banner -->
+        <div class="prhall_banner">
+            <a href="#">
+                <div class="banner_txt">
+                    <div class="title">
+                        <span>ONLINE</span>
+                        <h3>PR HALL</h3>
+                    </div>
+                    <div class="explan">
+                        모두에게 가치 있는 경험을 제공하기 위해 노력해온<br />
+                        삼성전기의 역사를 소개합니다.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <!-- //pr hall_banner -->
+        <hr />
         <!-- content2 -->
         <div class="content2">
-            <h2>뉴스룸</h2>
-            <ul>
-            <li><a href="#">삼성전기, 2022년 시무식 개최</a><span>2022.05.19</span></li>
-            <li><a href="#">렌즈제조기술 최고 전문가 함동수 명장 선정</a><span>2022.03.26</span></li>
-            <li><a href="#">1월 뉴스레터 발행</a><span>2021.02.12</span></li>
-            <li><a href="#">삼성전기의 2021년 돌아보기</a><span>2021.01.01</span></li>
-            </ul>
-            <div class="newsletter">
-                <h3>뉴스레터</h3>
-                <p>삼성전기의 주요소식들을 신속하게 전해드립니다.</p>
-                <ul>
-                <li><a href="#">뉴스레터 보기</a></li>
-                <li><a href="#">뉴스레터 신청</a></li>
-                </ul>
-            </div>
-            <div class="social">
-                <h3>소셜채널</h3>
-                <p>삼성전기의 다양한 소셜채널을 만나보세요.</p>
-                <ul>
-                <li><a href="#">유튜브</a></li>
-                <li><a href="#">블로그</a></li>
-                <li><a href="#">페이스북</a></li>
-                <li><a href="#">링크드인</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- //content2 -->
-        <hr />
-        <!-- content3 -->
-        <div class="content3">
             <h2>제품정보</h2>
             <div>
                 <h3>컴포턴트</h3>
@@ -153,6 +166,32 @@
                 <ul>
                 <li><a href="#">Package Substrate</a></li>
                 </ul>
+            </div>
+        </div>
+        <!-- //content2 -->
+        <!-- content3 -->
+        <div class="content3">
+            <div class="company_intro">
+                <a href="#">
+                    <div class="bg"></div>
+                    <dl class="txt">
+                        <dt>기업소개</dt>
+                        <dd>삼성전기는 첨단 전자부품에서 기계부품까지 생산하는<br />
+                            세계적인 종합부품 제조회사입니다.
+                        </dd>
+                    </dl>
+                </a>
+            </div>
+            <div class="esg">
+                <a href="#">
+                    <div class="bg"></div>
+                    <dl class="txt">
+                        <dt>ESG</dt>
+                        <dd>첨단 기술업계를 선도하는 혁신기업으로 도약하기 위해 <br />
+                            다양한 이해관계자와의 신뢰를 바탕으로 지속가능경영을 실천하고 있습니다.
+                        </dd>
+                    </dl>
+                </a>
             </div>
         </div>
         <!-- //content3 -->
