--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- container -->
     <div id="container">
         <!-- content1 -->
-        <div class="content1">
+        <div class="content1 section">
             <h2>뉴스룸</h2>
             <ul class="news_list">
             <li>
@@ -122,7 +122,7 @@
         <!-- //content1 -->
         <hr />
         <!-- pr hall_banner -->
-        <div class="prhall_banner">
+        <div class="prhall_banner section">
             <a href="#">
                 <div class="banner_txt">
                     <div class="title">
@@ -139,7 +139,7 @@
         <!-- //pr hall_banner -->
         <hr />
         <!-- content2 -->
-        <div class="content2">
+        <div class="content2 section">
             <h2>제품정보</h2>
             <div>
                 <h3>컴포턴트</h3>
